--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,11 @@
 <h3>Post Form</h3>
+<form class="" action="index.html" method="post">
+  <label>Post title:</label></br>
+  <input type="text" id="post_title" name="post[title]" value=""><br>
+
+  <label>Post description</label>
+  <textarea id= "post_description" name="post[description]" rows="8" cols="80"></textarea>
+
+  <input type="submit" name="" value="Submit Post">
+</form>
+<%= params.inspect%>
