--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <h3>Post Form</h3>
-<form class="" action="index.html" method="post">
+<form class="" action="<%= posts_path%>" method="post">
   <label>Post title:</label></br>
   <input type="text" id="post_title" name="post[title]" value=""><br>
 
