--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,7 +5,7 @@
 
   <label>Post description</label>
   <textarea id= "post_description" name="post[description]" rows="8" cols="80"></textarea>
-
+  <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
   <input type="submit" name="" value="Submit Post">
 </form>
 <%= params.inspect%>
