--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,11 +1,13 @@
 <h3>Post Form</h3>
 <form class="" action="<%= posts_path%>" method="post">
+  <%= form_tag posts_path do %>
   <label>Post title:</label></br>
   <input type="text" id="post_title" name="post[title]" value=""><br>
 
   <label>Post description</label>
   <textarea id= "post_description" name="post[description]" rows="8" cols="80"></textarea>
-  <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token%>
   <input type="submit" name="" value="Submit Post">
+  <%end%>
 </form>
 <%= params.inspect%>
