--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,11 +2,10 @@
 <form class="" action="<%= posts_path%>" method="post">
   <%= form_tag posts_path do %>
   <label>Post title:</label></br>
-  <input type="text" id="post_title" name="post[title]" value=""><br>
-
+  <%= text_field_tag :'post[title]'%><br>
   <label>Post description</label>
-  <textarea id= "post_description" name="post[description]" rows="8" cols="80"></textarea>
-  <input type="submit" name="" value="Submit Post">
+  <%=text_area_tag :'post[description]'%><br>
+  <%= submit_tag "Submit Post" %>
   <%end%>
 </form>
 <%= params.inspect%>
